# CG_PROJETO

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
Aula5/: main.cpp
Engine/: a.out  config.xml  engine.cpp  plane.3d
Fase1/: README.md
Fase1/Engine/: config.xml  engine.cpp
Fase1/Generator/: a.out  cone.3d  generator.cpp
Fase2/: CMakeLists.txt
Fase2/Engine/: Cor.cpp  Grupo.cpp  Transformacao.cpp  a.out  config.xml  config2.xml  engine.cpp
Fase2/Engine/headers/: Grupo.h  Transformacao.h
Fase2/Generator/: a.out  cube.3d  generator.cpp  plane.3d  sphere.3d  teste.cpp  torus.3d
Fase3/: CMakeLists.txt  config.xml  config2.txt
Fase3/Engine/: Grupo.cpp  Rotacao.cpp  engine.cpp
Fase3/Engine/headers/: Grupo.h  Transformacao.h  Translacao.h
Fase3/Generator/: generator.cpp
Fase3/src/Engine/: CatmullRomCurve.cpp  Cor.cpp  Escala.cpp  Grupo.cpp  Rotacao.cpp  Transformacao.cpp  Translacao.cpp  engine.cpp  tinyxml2.cpp
Fase3/src/Engine/headers/: CatmullRomCurve.h  Cor.h  Escala.h  Grupo.h  Rotacao.h  Transformacao.h  Translacao.h
Fase3/src/Generator/: generator.cpp
Fase3/src/include/: Ponto.h
Fase4/: CMakeLists.txt  config.xml
Fase4/files/3d/: cube.3d  plane.3d  sphere.3d  torus.3d
Fase4/src/Common/: Normal.h  Textura.h
Fase4/src/Engine/: Grupo.cpp  Light.cpp  Model.cpp  Translacao.cpp  engine.cpp
Fase4/src/Engine/headers/: CatmullRomCurve.h  Escala.h  Grupo.h  Light.h  Model.h  Rotacao.h  Translacao.h
Fase4/src/Generator/: BezierPatch.cpp  a.out  generator.cpp
Fase4/src/Generator/headers/: BezierPatch.h
Fase4/src/include/: Normal.h  Textura.h
Generator/: a.out  cube.3d  generator.cpp  plane.3d  sphere.3d
